--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.16.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-icons": "^4.2.0",
@@ -21,6 +24,7 @@
     "reactstrap": "^8.9.0",
     "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
+    "stripe": "^8.168.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
