--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "evergreen-ui": "^6.4.0",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
@@ -23,7 +25,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-toastify": "^7.0.4",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^8.10.0",
     "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
     "stripe": "^8.168.0",
