--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "evergreen-ui": "^6.4.0",
+    "history": "^5.2.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
